Corrigir erro de CORS preflight bloqueando requisições
Problema identificado:
- Browser bloqueava requisições com erro CORS
- "No 'Access-Control-Allow-Origin' header is present"
- Requisições OPTIONS (preflight) eram bloqueadas por autenticação
- Frontend em localhost:8080 não conseguia acessar backend em localhost:3001

Correções implementadas:

1. SecurityConfig.java:
   - Mudado setAllowedOrigins para setAllowedOriginPatterns("*")
     * Permite todas as origens temporariamente para debug
     * Resolve problemas com localhost e diferentes portas
   - Adicionado setExposedHeaders("*")
     * Permite frontend acessar todos os headers da resposta
   - Adicionado setMaxAge(3600L)
     * Cacheia resposta preflight por 1 hora
     * Reduz número de requisições OPTIONS
   - Adicionado requestMatcher para permitir OPTIONS sem auth
     * Todas as requisições OPTIONS agora passam sem autenticação

2. JwtAuthenticationFilter.java:
   - Adicionado verificação no início do filtro
   - Pula autenticação JWT para requisições OPTIONS
   - Permite preflight passar diretamente

Resultado:
- Requisições OPTIONS agora passam sem bloqueio
- CORS configurado corretamente com headers necessários
- Frontend pode fazer requisições cross-origin normalmente

Nota: setAllowedOriginPatterns("*") é temporário para debug.
Em produção, deve ser substituído por lista específica de origens.